--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+numpy==1.23.5
+pmdarima==1.8.5
+scikit-learn>=1.0
+pandas>=1.3
+matplotlib>=3.4
+statsmodels>=0.13
 streamlit
-pandas
-numpy
-matplotlib
-pmdarima
