--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-numpy==1.23.5
-pmdarima==1.8.5
-scikit-learn>=1.0
-pandas>=1.3
-matplotlib>=3.4
-statsmodels>=0.13
-streamlit
+numpy==1.24.3
+scipy==1.10.1
+pandas==1.5.3
+scikit-learn==1.2.2
+statsmodels==0.13.5
+Cython==0.29.36
+joblib==1.2.0
+pmdarima==2.0.3
+
+streamlit==1.35.0
+matplotlib==3.7.1
